[build-system]
requires = ["setuptools>=45.1.0", "wheel"]

[tool.poetry]
name = "Sarsor"
version = "0.1.0"
description = "A natural language processing library for Arabic."
authors = ["Hesham Haroon"]

[tool.poetry.dependencies]
python = "^3.6"
transformers = "^4.0"
nltk = "^3.5"
pyarabic = "^0.6"
torch = "^1.7"
csv = "^3.0"
sentencepiece = "^0.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1"
